# a2ui-adk-playground

./: .gitignore
agent/: .env  Makefile  a2ui_prompt_builder.py  agent.py  agent_executor.py  prompt_builder.py  pyproject.toml  restaurant_agent.py  server.py
agents/: pyproject.toml
runtime/: .env  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts
runtime/src/: config.ts  server.ts
web-app/: eslint.config.js  package-lock.json  package.json  vite.config.ts
web-app/src/: App.tsx
web-app/src/a2ui/: index.ts  renderer.ts  theme.ts
web-app/src/chat/: ChatArea.tsx  index.ts
web-app/src/chat/chat-header/: ChatHeader.tsx
web-app/src/chat/chat-message/: ChatMessage.tsx  FormattedText.tsx  MessageContent.tsx
web-app/src/chat/message-input/: MessageInput.tsx
web-app/src/chat/plan-indicator/: PlanIndicator.tsx
web-app/src/chat/plan-modal/: PlanModal.tsx  index.ts
web-app/src/chat/tool-call/: ToolCall.tsx  index.ts
web-app/src/layout/: Page.tsx
web-app/src/layout/left-sidebar/: LeftSidebar.tsx
web-app/src/layout/main-content/: MainContent.tsx
